server/ecs/cloudformation/khulnasoft-ecs-ec2/khulnasoftEcs-external.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  This AWS CloudFormation template installs the Khulnasoft Command Center components
  in ECS EC2.
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: ECS Infrastructure Configuration
        Parameters:
          - ECSClusterName
          - EcsSecurityGroupId
          - VpcId
          - VpcCidr
          - LbSubnets
          - SSLCert
          - LBScheme
      - Label:
          default: Khulnasoft Security Configuration
        Parameters:
          - KhulnasoftConsoleAccess
          - KhulnasoftGatewayAccess
          - KhulnasoftConsoleImage
          - KhulnasoftGatewayImage
          - KhulnasoftEnforcerImage
          - BatchInstallToken
          - ActiveActive
          - Taskprivileged
          - KhulnasoftLogLevel
          - KhulnasoftPassword
      - Label:
          default: TLS Configuration
        Parameters:
          - TLSEnabled
          - TLSRootCA
          - KhulnasoftConsoleCrt
          - KhulnasoftConsoleKey
          - KhulnasoftGatewayCrt
          - KhulnasoftGatewayKey
          - KhulnasoftEnforcerCrt
          - KhulnasoftEnforcerKey
          - TlsVerify
      - Label:
          default: Khulnasoft Manage DB Configuration
        Parameters:
          - KhulnasoftDBInstanceEndPointURL
          - KhulnasoftDBUserName
          - KhulnasoftDBPassword
          - AuditRDS
          - AuditDBInstanceEndPointURL
          - AuditDBUserName
          - AuditDBPassword
Parameters:
  BatchInstallToken:
    Type: String
    Description: A unique string token used in the Khulnasoft Enforcer Install command.
  KhulnasoftConsoleImage:
    Type: String
    Description: >
      The path of the Khulnasoft Console container image in the ECR.
      Specify the complete image URI, including the ECR repository, image name, and tag (e.g., your-ecr-repository/khulnasoft-console:latest).
  KhulnasoftGatewayImage:
    Type: String
    Description: >
      The path of the Khulnasoft Gateway container image in the ECR.
      Specify the complete image URI, including the ECR repository, image name, and tag (e.g., your-ecr-repository/khulnasoft-console:latest).
  KhulnasoftEnforcerImage:
    Type: String
    Description: >
      The path of the Khulnasoft Enforcer container image in the ECR.
      Specify the complete image URI, including the ECR repository, image name, and tag (e.g., your-ecr-repository/khulnasoft-console:latest).
  ECSClusterName:
    Description: The name of an existing Amazon ECS cluster where you want to deploy the resources.
    Type: String
    MinLength: '5'
    MaxLength: '25'
  EcsSecurityGroupId:
    Type: 'AWS::EC2::SecurityGroup::Id'
    Description: >
      The security group ID associated with the Amazon ECS cluster or ECS instances created during cluster formation.
      This security group controls the inbound and outbound traffic for the ECS resources.
  VpcId:
    Description: >
      The ID of the VPC where you want to deploy the resources.
      Specify the VPC ID to associate the stack with a specific networking environment.
    Type: 'AWS::EC2::VPC::Id'
  VpcCidr:
    Description: >
      The CIDR block of the VPC.
      This information is used by the load balancer service for polling purposes.
      Enter the CIDR block in the format, for example, 10.0.0.0/16.
    Type: String
  LbSubnets:
    Type: 'List<AWS::EC2::Subnet::Id>'
    Description: >
      Choose the external subnets where the load balancer will be deployed to enable internet access.
      These subnets determine the availability zones for the load balancer.
  LBScheme:
    Type: String
    Description: >
      Choose the load balancer scheme to define its accessibility:
      - Select "internet-facing" for external access.
      - Choose "internal" for internal access within your VPC.
    Default: internet-facing
    AllowedValues:
      - internet-facing
      - internal
  KhulnasoftConsoleAccess:
    Description: >-
      The default (0.0.0.0/0) CIDR range will provide global access for Khulnasoft Console.
      Please update your own IP address or CIDR range to restrict the Khulnasoft Console access.
    Default: 0.0.0.0/0
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x
  KhulnasoftGatewayAccess:
    Description: >-
      The Default (0.0.0.0/0) CIDR range will provide global access for Khulnasoft Gateway.
      Please update your own IP address or CIDR range to restrict the Khulnasoft Gateway access.
    Default: 0.0.0.0/0
    Type: String
    MinLength: '9'
    MaxLength: '18'
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x
  KhulnasoftDBInstanceEndPointURL:
    Description: >
      Enter the Endpoint URL of the Khulnasoft Database.
      This URL is used to establish a connection with the Khulnasoft Database instance.
    Type: String
  KhulnasoftDBUserName:
    Description: >
      Enter the username for authentication to the Khulnasoft Database.
      This username is required to access and interact with the Khulnasoft Database.
    Type: String
  KhulnasoftDBPassword:
    NoEcho: true
    Description: Enter the password for authentication to the Khulnasoft Database.
    Type: String
  AuditRDS:
    Description: >
      Select "Yes" if you have a separate Amazon RDS endpoint dedicated for audit purposes.
      Choosing "No" indicates that the standard Amazon RDS endpoint will be used.
    Default: 'No'
    Type: String
    AllowedValues: [ 'Yes', 'No' ]
  AuditDBInstanceEndPointURL:
    Description: >
      Enter the Endpoint URL of the dedicated Audit Database.
      This URL is used to establish a connection with the Audit Database instance.
    Type: String
  AuditDBUserName:
    Description: >
      Enter the username for authentication to the Audit Database.
      This username is required to access and interact with the Audit Database.
    Type: String
  AuditDBPassword:
    NoEcho: true
    Description: Enter the password for authentication to the Audit Database.
    Type: String
  SSLCert:
    Type: String
    Description: The ARN of the SSL certificate to be used with the Khulnasoft Console web user interface Load Balancer (LB).
  ActiveActive:
    Description: >
      Enable or disable the Active-Active configuration for the Khulnasoft Console.
      Select "true" to activate Active-Active mode, distributing traffic across multiple instances.
      Select "false" for standard mode with a single active instance.
    Type: String
    Default: 'false'
    AllowedValues:
      - 'true'
      - 'false'
  Taskprivileged:
    Description: >
      Choose "true" to run the Khulnasoft Enforcer in privileged mode, allowing elevated privileges.
      Choose "false" to run the Khulnasoft Enforcer in non-privileged mode with reduced privileges.
    Type: String
    Default: 'true'
    AllowedValues:
      - 'true'
      - 'false'
  TLSEnabled:
    Description: >-
      Enable mTLS/TLS establishment between Khulnasoft Console <-> Khulnasoft Gateway and https for
      Khulnasoft Console
    Type: String
    Default: 'false'
    AllowedValues:
      - 'true'
      - 'false'
  TLSRootCA:
    Description: The ARN of the root certificate stored in AWS Secrets Manager.
    Type: String
  KhulnasoftConsoleCrt:
    Description: The ARN of the Khulnasoft Console certificate stored in AWS Secrets Manager.
    Type: String
  KhulnasoftConsoleKey:
    Description: The ARN of the Khulnasoft Console certificate key stored in AWS Secrets Manager.
    Type: String
  KhulnasoftGatewayCrt:
    Description: The ARN of the Khulnasoft Gateway certificate stored in AWS Secrets Manager.
    Type: String
  KhulnasoftGatewayKey:
    Description: The ARN of the Khulnasoft Gateway certificate key stored in AWS Secrets Manager.
    Type: String
  KhulnasoftEnforcerCrt:
    Description: The ARN of the Khulnasoft Enforcer certificate stored in AWS Secrets Manager.
    Type: String
  KhulnasoftEnforcerKey:
    Description: The ARN of the Khulnasoft Enforcer certificate key stored in AWS Secrets Manager.
    Type: String
  TlsVerify:
    Description: Enable mTLS/TLS between Khulnasoft Enforcer and Khulnasoft Gateway
    Type: String
    Default: 'false'
    AllowedValues:
      - 'true'
      - 'false'
  KhulnasoftLogLevel:
    Description: Khulnasoft log level, by default set to INFO
    Type: String
    Default: "INFO"
    AllowedValues:
      - "WARN"
      - "DEBUG"
      - "INFO"
      - "ERROR"
  KhulnasoftPassword:
    Type: String
    Description: Use this Khulnasoft admin password
    NoEcho: true
Conditions:
  CreateActiveActive: !Equals [ !Ref ActiveActive, 'true' ]
  CreateAuditrds: !Equals [ !Ref AuditRDS, 'Yes' ]
  TLSEnable: !Equals
    - !Ref TLSEnabled
    - 'true'
  KhulnasoftTlsVerify: !Equals
    - !Ref TlsVerify
    - 'true'
Resources:
  LambdaExecutionRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - lambda.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Policies:
        - PolicyName: allowLambdaLogging
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 'logs:*'
                Resource: '*'
  RandomStringLambdaFunction:
    Type: 'AWS::Lambda::Function'
    Properties:
      Handler: index.lambda_handler
      Timeout: 10
      Role: !GetAtt LambdaExecutionRole.Arn
      Runtime: python3.9
      Code:
        ZipFile: |
          import cfnresponse
          from random import choice
          from string import ascii_lowercase, digits
          def random_string(length=8, chars=ascii_lowercase + digits):
            return "".join(choice(chars) for x in range(length))
          def lambda_handler(event, context):
            print(f"Data in event: {event}")
            response_data = {}
            if event["RequestType"] == "Create":
              string_length = int(event["ResourceProperties"]["Length"])
              physicalResourceId = random_string(string_length)
              response_data = { "RandomString": physicalResourceId }

            else: # if event["RequestType"] == "Update" or event["RequestType"] == "Delete":
              physicalResourceId = event["PhysicalResourceId"]
            cfnresponse.send(event, context, cfnresponse.SUCCESS, response_data, physicalResourceId)
  RandomString:
    Type: 'AWS::CloudFormation::CustomResource'
    Properties:
      Length: 5
      ServiceToken: !GetAtt RandomStringLambdaFunction.Arn
  KhulnasoftConsoleLB:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    DependsOn:
      - EcsSecurityGroupIngress1
      - EcsSecurityGroupIngress2
      - EcsSecurityGroupIngress3
    Properties:
      Name: !Sub 'KhulnasoftConsoleLB-${RandomString}'
      Scheme: !Ref LBScheme
      SecurityGroups:
        - !Ref KhulnasoftConsoleSecurityGroup
      Subnets: !Ref LbSubnets
      Type: application
  KhulnasoftConsoleTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      Family: !Sub 'khulnasoft-console-td-${RandomString}'
      RequiresCompatibilities:
        - EC2
      Volumes:
        - Host:
            SourcePath: /var/run/docker.sock
          Name: docker-socket
        - !If
          - TLSEnable
          - Name: secret-vol
            DockerVolumeConfiguration:
              Scope: task
              Driver: local
          - !Ref 'AWS::NoValue'
      ContainerDefinitions:
        - Name: !Sub 'khulnasoft-console-td-${RandomString}'
          Image: !Ref KhulnasoftConsoleImage
          Cpu: '1024'
          Ulimits:
            - Name: nofile
              SoftLimit: '1048576'
              HardLimit: '1048576'
          MountPoints:
            - ContainerPath: /var/run/docker.sock
              SourceVolume: docker-socket
            - !If
              - TLSEnable
              - ContainerPath: /opt/khulnasoft/ssl
                SourceVolume: secret-vol
              - !Ref 'AWS::NoValue'
          PortMappings:
            - ContainerPort: '8080'
              HostPort: '8080'
              Protocol: tcp
            - ContainerPort: '8443'
              HostPort: '8442'
              Protocol: tcp
          Memory: '2048'
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref KhulnasoftConsoleLogGroup
              awslogs-region: !Ref "AWS::Region"
              awslogs-stream-prefix: khulnasoftConsole
          Essential: true
          Secrets:
            - Name: SCALOCK_DBPASSWORD
              ValueFrom: !Ref SecretRDSPassword
            - Name: SCALOCK_AUDIT_DBPASSWORD
              ValueFrom: !If [ CreateAuditrds, !Ref SecretAuditPassword, !Ref SecretRDSPassword ]
            - Name: SCALOCK_DBUSER
              ValueFrom: !Ref SecretRDSUsername
            - Name: SCALOCK_AUDIT_DBUSER
              ValueFrom: !If [ CreateAuditrds, !Ref SecretAuditUsername, !Ref SecretRDSUsername ]
            - Name: BATCH_INSTALL_TOKEN
              ValueFrom: !Ref SecretBatchToken
            - Name: KHULNASOFT_PUBSUB_DBPASSWORD
              ValueFrom: !Ref SecretRDSPassword
            - Name: KHULNASOFT_PUBSUB_DBUSER
              ValueFrom: !Ref SecretRDSUsername
            - Name: ADMIN_PASSWORD
              ValueFrom: !Ref SecretKhulnasoftPassword
          Environment:
            - Name: SCALOCK_LOG_LEVEL
              Value: !Ref KhulnasoftLogLevel
            - Name: KHULNASOFT_GRPC_MODE
              Value: 1
            - Name: SCALOCK_DBSSL
              Value: require
            - Name: SCALOCK_AUDIT_DBSSL
              Value: require
            - Name: SCALOCK_DBNAME
              Value: scalock
            - Name: SCALOCK_DBHOST
              Value: !Ref KhulnasoftDBInstanceEndPointURL
            - Name: SCALOCK_AUDIT_DBNAME
              Value: slk_audit
            - Name: SCALOCK_AUDIT_DBHOST
              Value: !If [ CreateAuditrds, !Ref AuditDBInstanceEndPointURL, !Ref KhulnasoftDBInstanceEndPointURL ]
            - Name: KHULNASOFT_PUBSUB_DBSSL
              Value: !If [ CreateActiveActive, require, !Ref "AWS::NoValue" ]
            - Name: KHULNASOFT_PUBSUB_DBNAME
              Value: !If [ CreateActiveActive, pubsub, !Ref "AWS::NoValue" ]
            - Name: KHULNASOFT_PUBSUB_DBHOST
              Value: !If [ CreateActiveActive, !Ref KhulnasoftDBInstanceEndPointURL, !Ref "AWS::NoValue" ]
            - Name: KHULNASOFT_CLUSTER_MODE
              Value: !If [ CreateActiveActive, active-active, !Ref "AWS::NoValue" ]
            - Name: KHULNASOFT_PRIVATE_KEY
              Value: !If [ TLSEnable, /opt/khulnasoft/ssl/key.pem, !Ref "AWS::NoValue" ]
            - Name: KHULNASOFT_PUBLIC_KEY
              Value: !If [ TLSEnable, /opt/khulnasoft/ssl/cert.pem, !Ref "AWS::NoValue" ]
            - Name: KHULNASOFT_ROOT_CA
              Value: !If [ TLSEnable, /opt/khulnasoft/ssl/root_ca.pem, !Ref "AWS::NoValue" ]
        - !If
          - TLSEnable
          - Name: secret-sidecar-root-ca
            Image: public.ecr.aws/aws-containers/aws-secrets-manager-secret-sidecar:v0.1.4
            Cpu: '0'
            Memory: '128'
            Essential: false
            LogConfiguration:
              LogDriver: awslogs
              Options:
                awslogs-group: !Ref KhulnasoftConsoleLogGroup
                awslogs-region: !Ref "AWS::Region"
                awslogs-stream-prefix: secret-sidecar-root-ca
            Environment:
              - Name: SECRET_ARN
                Value: !Ref TLSRootCA
              - Name: SECRET_FILENAME
                Value: root_ca.pem
            MountPoints:
              - ContainerPath: /tmp
                SourceVolume: secret-vol
          - !Ref 'AWS::NoValue'
        - !If
          - TLSEnable
          - Name: secret-sidecar-console-crt
            Image: public.ecr.aws/aws-containers/aws-secrets-manager-secret-sidecar:v0.1.4
            Cpu: '0'
            Memory: '128'
            Essential: false
            LogConfiguration:
              LogDriver: awslogs
              Options:
                awslogs-group: !Ref KhulnasoftConsoleLogGroup
                awslogs-region: !Ref "AWS::Region"
                awslogs-stream-prefix: secret-sidecar-console-crt
            Environment:
              - Name: SECRET_ARN
                Value: !Ref KhulnasoftConsoleCrt
              - Name: SECRET_FILENAME
                Value: cert.pem
            MountPoints:
              - ContainerPath: /tmp
                SourceVolume: secret-vol
          - !Ref 'AWS::NoValue'
        - !If
          - TLSEnable
          - Name: secret-sidecar-console-key
            Image: public.ecr.aws/aws-containers/aws-secrets-manager-secret-sidecar:v0.1.4
            Cpu: '0'
            Memory: '128'
            Essential: false
            LogConfiguration:
              LogDriver: awslogs
              Options:
                awslogs-group: !Ref KhulnasoftConsoleLogGroup
                awslogs-region: !Ref "AWS::Region"
                awslogs-stream-prefix: secret-sidecar-console-key
            Environment:
              - Name: SECRET_ARN
                Value: !Ref KhulnasoftConsoleKey
              - Name: SECRET_FILENAME
                Value: key.pem
            MountPoints:
              - ContainerPath: /tmp
                SourceVolume: secret-vol
          - !Ref 'AWS::NoValue'
      NetworkMode: bridge
      TaskRoleArn: !GetAtt KhulnasoftEcsTaskRole.Arn
      ExecutionRoleArn: !GetAtt KhulnasoftEcsTaskRole.Arn
  KhulnasoftConsoleService:
    Type: 'AWS::ECS::Service'
    DependsOn:
      - KhulnasoftConsoleListener
      - KhulnasoftConsoleGrpcListener
    Properties:
      Cluster: !Ref ECSClusterName
      LaunchType: EC2
      ServiceName: !Sub 'khulnasoft-console-td-${RandomString}'
      DesiredCount: '1'
      PlacementStrategies:
        - Type: spread
          Field: 'attribute:ecs.availability-zone'
        - Type: spread
          Field: instanceId
      DeploymentConfiguration:
        MaximumPercent: '200'
        MinimumHealthyPercent: '50'
      LoadBalancers:
        - ContainerName: !Sub 'khulnasoft-console-td-${RandomString}'
          ContainerPort: '8080'
          TargetGroupArn: !Ref KhulnasoftConsoleHealthTargetGroup
        - ContainerName: !Sub 'khulnasoft-console-td-${RandomString}'
          ContainerPort: '8443'
          TargetGroupArn: !Ref KhulnasoftConsoleGrpcTargetGroup
      TaskDefinition: !Ref KhulnasoftConsoleTaskDefinition
  KhulnasoftConsoleListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref KhulnasoftConsoleHealthTargetGroup
      LoadBalancerArn: !Ref KhulnasoftConsoleLB
      Port: '443'
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref SSLCert
      SslPolicy: ELBSecurityPolicy-FS-1-2-Res-2019-08
  KhulnasoftConsoleGrpcListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref KhulnasoftConsoleGrpcTargetGroup
      LoadBalancerArn: !Ref KhulnasoftConsoleLB
      Port: '8442'
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref SSLCert
      SslPolicy: ELBSecurityPolicy-FS-1-2-Res-2019-08
  KhulnasoftConsoleHealthTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    DependsOn:
      - KhulnasoftConsoleLB
    Properties:
      TargetType: instance
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 20
      HealthyThresholdCount: 3
      Matcher:
        HttpCode: '200'
      Name: !Sub 'khulnasoft-console-health-tg-${RandomString}'
      Port: '8080'
      Protocol: HTTP
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '60'
      UnhealthyThresholdCount: 3
      VpcId: !Ref VpcId
  KhulnasoftConsoleGrpcTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    DependsOn:
      - KhulnasoftConsoleLB
    Properties:
      TargetType: instance
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: HTTPS
      HealthyThresholdCount: 2
      HealthCheckPath: "/"
      Matcher:
        GrpcCode: '0-99'
      Name: !Sub 'khulnasoft-console-grpc-tg-${RandomString}'
      Port: '8442'
      Protocol: HTTPS
      ProtocolVersion: GRPC
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '60'
      UnhealthyThresholdCount: 2
      VpcId: !Ref VpcId
  KhulnasoftGatewayGrpcListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    DependsOn:
      - KhulnasoftConsoleGrpcTargetGroup
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref KhulnasoftGatewayGrpcTargetGroup
      LoadBalancerArn: !Ref KhulnasoftGatewayLB
      Port: '8443'
      Protocol: TCP
  KhulnasoftGatewayGrpcTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    DependsOn:
      - KhulnasoftGatewayLB
    Properties:
      TargetType: instance
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: TCP
      HealthyThresholdCount: 2
      UnhealthyThresholdCount: 2
      Name: !Sub 'khulnasoft-gateway-grpc-tg-${RandomString}'
      Port: '8443'
      Protocol: TCP
      VpcId: !Ref VpcId
  KhulnasoftGatewayHealthListener:
    Type: 'AWS::ElasticLoadBalancingV2::Listener'
    DependsOn:
      - KhulnasoftGatewayGrpcTargetGroup
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref KhulnasoftGatewayHealthTargetGroup
      LoadBalancerArn: !Ref KhulnasoftGatewayLB
      Port: '8089'
      Protocol: TCP
  KhulnasoftGatewayHealthTargetGroup:
    Type: 'AWS::ElasticLoadBalancingV2::TargetGroup'
    DependsOn:
      - KhulnasoftGatewayLB
    Properties:
      TargetType: instance
      HealthCheckIntervalSeconds: 30
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 10
      HealthyThresholdCount: 2
      Matcher:
        HttpCode: '200'
      Name: !Sub 'khulnasoft-gateway-health-tg-${RandomString}'
      Port: '8089'
      Protocol: TCP
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: '60'
      UnhealthyThresholdCount: 3
      VpcId: !Ref VpcId
  KhulnasoftGatewayLB:
    Type: 'AWS::ElasticLoadBalancingV2::LoadBalancer'
    DependsOn:
      - EcsSecurityGroupIngress4
      - EcsSecurityGroupIngress5
    Properties:
      Name: !Sub 'KhulnasoftGatewayLB-${RandomString}'
      Scheme: !Ref LBScheme
      SecurityGroups:
        - !Ref KhulnasoftGatewaySecurityGroup
      Subnets: !Ref LbSubnets
      Type: network
  KhulnasoftGatewayTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    Properties:
      Family: !Sub 'khulnasoft-gateway-td-${RandomString}'
      TaskRoleArn: !GetAtt KhulnasoftEcsTaskRole.Arn
      ExecutionRoleArn: !GetAtt KhulnasoftEcsTaskRole.Arn
      RequiresCompatibilities:
        - EC2
      Volumes:
        - !If
          - TLSEnable
          - Name: secret-vol
            DockerVolumeConfiguration:
              Scope: task
              Driver: local
          - !Ref 'AWS::NoValue'
      ContainerDefinitions:
        - Name: !Sub 'khulnasoft-gateway-td-${RandomString}'
          Image: !Ref KhulnasoftGatewayImage
          Ulimits:
            - Name: nofile
              SoftLimit: '1048576'
              HardLimit: '1048576'
          MountPoints:
            - !If
              - TLSEnable
              - ContainerPath: /opt/khulnasoft/ssl
                SourceVolume: secret-vol
              - !Ref 'AWS::NoValue'
          PortMappings:
            - ContainerPort: '8443'
              HostPort: '8443'
              Protocol: tcp
            - ContainerPort: '8089'
              HostPort: '8089'
              Protocol: tcp
          Cpu: '1024'
          Memory: '2048'
          Essential: true
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref KhulnasoftGatewayLogGroup
              awslogs-region: !Ref "AWS::Region"
              awslogs-stream-prefix: khulnasoftGateway
          Secrets:
            - Name: SCALOCK_DBPASSWORD
              ValueFrom: !Ref SecretRDSPassword
            - Name: SCALOCK_AUDIT_DBPASSWORD
              ValueFrom: !If [ CreateAuditrds, !Ref SecretAuditPassword, !Ref SecretRDSPassword ]
            - Name: SCALOCK_DBUSER
              ValueFrom: !Ref SecretRDSUsername
            - Name: SCALOCK_AUDIT_DBUSER
              ValueFrom: !If [ CreateAuditrds, !Ref SecretAuditUsername, !Ref SecretRDSUsername ]
          Environment:
            - Name: SCALOCK_LOG_LEVEL
              Value: !Ref KhulnasoftLogLevel
            - Name: SCALOCK_DBSSL
              Value: require
            - Name: SCALOCK_AUDIT_DBSSL
              Value: require
            - Name: HEALTH_MONITOR
              Value: '0.0.0.0:8089'
            - Name: SCALOCK_DBNAME
              Value: scalock
            - Name: SCALOCK_DBHOST
              Value: !Ref KhulnasoftDBInstanceEndPointURL
            - Name: SCALOCK_AUDIT_DBNAME
              Value: slk_audit
            - Name: SCALOCK_AUDIT_DBHOST
              Value: !If [ CreateAuditrds, !Ref AuditDBInstanceEndPointURL, !Ref KhulnasoftDBInstanceEndPointURL ]
            - Name: KHULNASOFT_CONSOLE_SECURE_ADDRESS
              Value: !Sub "${KhulnasoftConsoleLB.DNSName}:8442"
            - Name: KHULNASOFT_PRIVATE_KEY
              Value: !If [ TLSEnable, /opt/khulnasoft/ssl/key.pem, !Ref "AWS::NoValue" ]
            - Name: KHULNASOFT_PUBLIC_KEY
              Value: !If [ TLSEnable, /opt/khulnasoft/ssl/cert.pem, !Ref "AWS::NoValue" ]
            - Name: KHULNASOFT_ROOT_CA
              Value: !If [ TLSEnable, /opt/khulnasoft/ssl/root_ca.pem, !Ref "AWS::NoValue" ]
            - Name: KHULNASOFT_VERIFY_ENFORCER
              Value: !If
                - KhulnasoftTlsVerify
                - "1"
                - "0"
        - !If
          - TLSEnable
          - Name: secret-sidecar-root-ca
            Image: public.ecr.aws/aws-containers/aws-secrets-manager-secret-sidecar:v0.1.4
            Cpu: '0'
            Memory: '128'
            Essential: false
            LogConfiguration:
              LogDriver: awslogs
              Options:
                awslogs-group: !Ref KhulnasoftGatewayLogGroup
                awslogs-region: !Ref "AWS::Region"
                awslogs-stream-prefix: secret-sidecar-root-ca
            Environment:
              - Name: SECRET_ARN
                Value: !Ref TLSRootCA
              - Name: SECRET_FILENAME
                Value: root_ca.pem
            MountPoints:
              - ContainerPath: /tmp
                SourceVolume: secret-vol
          - !Ref 'AWS::NoValue'
        - !If
          - TLSEnable
          - Name: secret-sidecar-gateway-crt
            Image: public.ecr.aws/aws-containers/aws-secrets-manager-secret-sidecar:v0.1.4
            Cpu: '0'
            Memory: '128'
            Essential: false
            LogConfiguration:
              LogDriver: awslogs
              Options:
                awslogs-group: !Ref KhulnasoftGatewayLogGroup
                awslogs-region: !Ref "AWS::Region"
                awslogs-stream-prefix: secret-sidecar-gateway-crt
            Environment:
              - Name: SECRET_ARN
                Value: !Ref KhulnasoftGatewayCrt
              - Name: SECRET_FILENAME
                Value: cert.pem
            MountPoints:
              - ContainerPath: /tmp
                SourceVolume: secret-vol
          - !Ref 'AWS::NoValue'
        - !If
          - TLSEnable
          - Name: secret-sidecar-gateway-key
            Image: public.ecr.aws/aws-containers/aws-secrets-manager-secret-sidecar:v0.1.4
            Cpu: '0'
            Memory: '128'
            Essential: false
            LogConfiguration:
              LogDriver: awslogs
              Options:
                awslogs-group: !Ref KhulnasoftGatewayLogGroup
                awslogs-region: !Ref "AWS::Region"
                awslogs-stream-prefix: secret-sidecar-gateway-key
            Environment:
              - Name: SECRET_ARN
                Value: !Ref KhulnasoftGatewayKey
              - Name: SECRET_FILENAME
                Value: key.pem
            MountPoints:
              - ContainerPath: /tmp
                SourceVolume: secret-vol
          - !Ref 'AWS::NoValue'
      NetworkMode: bridge
  KhulnasoftGatewayService:
    Type: 'AWS::ECS::Service'
    DependsOn:
      - KhulnasoftGatewayLB
      - KhulnasoftGatewayHealthListener
      - KhulnasoftGatewayGrpcListener
      - EcsSecurityGroupIngress4
    Properties:
      Cluster: !Ref ECSClusterName
      ServiceName: !Sub 'khulnasoft-gateway-td-${RandomString}'
      DesiredCount: '1'
      PlacementStrategies:
        - Type: spread
          Field: 'attribute:ecs.availability-zone'
        - Type: spread
          Field: instanceId
      DeploymentConfiguration:
        MaximumPercent: '200'
        MinimumHealthyPercent: '50'
      LoadBalancers:
        - ContainerName: !Sub 'khulnasoft-gateway-td-${RandomString}'
          ContainerPort: '8443'
          TargetGroupArn: !Ref KhulnasoftGatewayGrpcTargetGroup
        - ContainerName: !Sub 'khulnasoft-gateway-td-${RandomString}'
          ContainerPort: '8089'
          TargetGroupArn: !Ref KhulnasoftGatewayHealthTargetGroup
      TaskDefinition: !Ref KhulnasoftGatewayTaskDefinition
  KhulnasoftEnforcerTaskDefinition:
    Type: 'AWS::ECS::TaskDefinition'
    DependsOn:
      - KhulnasoftGatewayService
    Properties:
      PidMode: 'host'
      ContainerDefinitions:
        - Memory: '1024'
          Essential: true
          MountPoints:
            - ContainerPath: /var/run
              SourceVolume: var-run
            - ContainerPath: /dev
              SourceVolume: dev
            - ContainerPath: /host/opt/khulnasoft
              SourceVolume: khulnasoft
              ReadOnly: true
            - ContainerPath: /opt/khulnasoft/tmp
              SourceVolume: khulnasoft-tmp
            - ContainerPath: /opt/khulnasoft/audit
              SourceVolume: khulnasoft-audit
            - ContainerPath: /data
              SourceVolume: data
            - ContainerPath: /host/proc
              SourceVolume: proc
              ReadOnly: true
            - ContainerPath: /host/sys
              SourceVolume: sys
              ReadOnly: true
            - ContainerPath: /host/etc
              SourceVolume: etc
              ReadOnly: true
            - !If
              - TLSEnable
              - ContainerPath: /opt/khulnasoft/ssl
                SourceVolume: secret-vol
              - !Ref 'AWS::NoValue'
          Name: khulnasoft-enforcer
          Privileged: !Ref Taskprivileged
          LinuxParameters:
            Capabilities:
              Add:
                - SYS_ADMIN
                - NET_ADMIN
                - NET_RAW
                - SYS_PTRACE
                - KILL
                - MKNOD
                - SETGID
                - SETUID
                - SYS_MODULE
                - AUDIT_CONTROL
                - SYSLOG
                - SYS_CHROOT
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref KhulnasoftEnforcerLogGroup
              awslogs-region: !Ref "AWS::Region"
              awslogs-stream-prefix: khulnasoftEnforcer
          Secrets:
            - Name: KHULNASOFT_TOKEN
              ValueFrom: !Ref SecretBatchToken
          Environment:
            - Name: SCALOCK_LOG_LEVEL
              Value: !Ref KhulnasoftLogLevel
            - Name: KHULNASOFT_SERVER
              Value: !Sub '${KhulnasoftGatewayLB.DNSName}:8443'
            - Name: SILENT
              Value: 'yes'
            - Name: RESTART_CONTAINERS
              Value: 'no'
            - Name: KHULNASOFT_LOGICAL_NAME
              Value: !Sub 'khulnasoft-enf-td-${RandomString}-ECS'
            - Name: KHULNASOFT_PRIVATE_KEY
              Value: !If [ TLSEnable, /opt/khulnasoft/ssl/key.pem, !Ref "AWS::NoValue" ]
            - Name: KHULNASOFT_PUBLIC_KEY
              Value: !If [ TLSEnable, /opt/khulnasoft/ssl/cert.pem, !Ref "AWS::NoValue" ]
            - Name: KHULNASOFT_ROOT_CA
              Value: !If [ TLSEnable, /opt/khulnasoft/ssl/root_ca.pem, !Ref "AWS::NoValue" ]
            - Name: KHULNASOFT_TLS_VERIFY
              Value: !Ref TlsVerify
          Image: !Ref KhulnasoftEnforcerImage
          Cpu: '512'
        - !If
          - TLSEnable
          - Name: secret-sidecar-root-ca
            Image: public.ecr.aws/aws-containers/aws-secrets-manager-secret-sidecar:v0.1.4
            Cpu: '0'
            Memory: '128'
            Essential: false
            LogConfiguration:
              LogDriver: awslogs
              Options:
                awslogs-group: !Ref KhulnasoftEnforcerLogGroup
                awslogs-region: !Ref "AWS::Region"
                awslogs-stream-prefix: secret-sidecar-root-ca
            Environment:
              - Name: SECRET_ARN
                Value: !Ref TLSRootCA
              - Name: SECRET_FILENAME
                Value: root_ca.pem
            MountPoints:
              - ContainerPath: /tmp
                SourceVolume: secret-vol
          - !Ref 'AWS::NoValue'
        - !If
          - TLSEnable
          - Name: secret-sidecar-enforcer-crt
            Image: public.ecr.aws/aws-containers/aws-secrets-manager-secret-sidecar:v0.1.4
            Cpu: '0'
            Memory: '128'
            Essential: false
            LogConfiguration:
              LogDriver: awslogs
              Options:
                awslogs-group: !Ref KhulnasoftEnforcerLogGroup
                awslogs-region: !Ref "AWS::Region"
                awslogs-stream-prefix: secret-sidecar-enforcer-crt
            Environment:
              - Name: SECRET_ARN
                Value: !Ref KhulnasoftEnforcerCrt
              - Name: SECRET_FILENAME
                Value: cert.pem
            MountPoints:
              - ContainerPath: /tmp
                SourceVolume: secret-vol
          - !Ref 'AWS::NoValue'
        - !If
          - TLSEnable
          - Name: secret-sidecar-enforcer-key
            Image: public.ecr.aws/aws-containers/aws-secrets-manager-secret-sidecar:v0.1.4
            Cpu: '0'
            Memory: '128'
            Essential: false
            LogConfiguration:
              LogDriver: awslogs
              Options:
                awslogs-group: !Ref KhulnasoftEnforcerLogGroup
                awslogs-region: !Ref "AWS::Region"
                awslogs-stream-prefix: secret-sidecar-enforcer-key
            Environment:
              - Name: SECRET_ARN
                Value: !Ref KhulnasoftEnforcerKey
              - Name: SECRET_FILENAME
                Value: key.pem
            MountPoints:
              - ContainerPath: /tmp
                SourceVolume: secret-vol
          - !Ref 'AWS::NoValue'
      Volumes:
        - Host:
            SourcePath: /var/run
          Name: var-run
        - Host:
            SourcePath: /dev
          Name: dev
        - Host:
            SourcePath: /opt/khulnasoft/data
          Name: data
        - Host:
            SourcePath: /opt/khulnasoft
          Name: khulnasoft
        - Host:
            SourcePath: /opt/khulnasoft/tmp
          Name: khulnasoft-tmp
        - Host:
            SourcePath: /opt/khulnasoft/audit
          Name: khulnasoft-audit
        - Host:
            SourcePath: /proc
          Name: proc
        - Host:
            SourcePath: /sys
          Name: sys
        - Host:
            SourcePath: /etc
          Name: etc
        - !If
          - TLSEnable
          - Name: secret-vol
            DockerVolumeConfiguration:
              Scope: task
              Driver: local
          - !Ref 'AWS::NoValue'
      Family: !Sub 'khulnasoft-enforcer-td-${RandomString}'
      TaskRoleArn: !GetAtt KhulnasoftEcsTaskRole.Arn
      ExecutionRoleArn: !GetAtt KhulnasoftEcsTaskRole.Arn
  KhulnasoftEnforcerDaemon:
    Type: 'AWS::ECS::Service'
    Properties:
      Cluster: !Ref ECSClusterName
      SchedulingStrategy: DAEMON
      LaunchType: EC2
      ServiceName: !Sub 'khulnasoft-enforcer-td-${RandomString}'
      TaskDefinition: !Ref KhulnasoftEnforcerTaskDefinition
  KhulnasoftConsoleSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Sub 'KhulnasoftConsolSG-${RandomString}'
      GroupDescription: Allow access to Khulnasoft Console Instances
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: !Ref KhulnasoftConsoleAccess
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: !Ref KhulnasoftConsoleAccess
        - IpProtocol: tcp
          FromPort: '8442'
          ToPort: '8442'
          CidrIp: !Ref KhulnasoftConsoleAccess
  KhulnasoftGatewaySecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupName: !Sub 'KhulnasoftGatewaySG-${RandomString}'
      GroupDescription: Allow access to Khulnasoft Gateway Instances
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '8443'
          ToPort: '8443'
          CidrIp: !Ref KhulnasoftGatewayAccess
        - IpProtocol: tcp
          FromPort: '8089'
          ToPort: '8089'
          CidrIp: !Ref KhulnasoftGatewayAccess
  EcsSecurityGroupIngress1:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allows inbound port 8080 from VPC to console.
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref VpcCidr
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080
  EcsSecurityGroupIngress2:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allows inbound port 80 from VPC to gateways for LB health check.
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref VpcCidr
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80
  EcsSecurityGroupIngress3:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allows inbound port 8442 from VPC to console Grpc.
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref VpcCidr
      IpProtocol: tcp
      FromPort: 8442
      ToPort: 8442
  EcsSecurityGroupIngress4:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allows inbound port 8443 from VPC to gateway Grpc.
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref KhulnasoftGatewayAccess
      IpProtocol: tcp
      FromPort: 8443
      ToPort: 8443
  EcsSecurityGroupIngress5:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      Description: Allows inbound port 8089 from VPC to GW health check.
      GroupId: !Ref EcsSecurityGroupId
      CidrIp: !Ref KhulnasoftGatewayAccess
      IpProtocol: tcp
      FromPort: 8089
      ToPort: 8089
  KhulnasoftEcsTaskRole:
    Type: 'AWS::IAM::Role'
    Properties:
      RoleName: !Sub 'KhulnasoftEcsTaskRole-${RandomString}'
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      Policies:
        - PolicyName: !Sub 'KhulnasoftScannerPolicy-${RandomString}'
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 'ecr:GetDownloadUrlForLayer'
                  - 'ecr:BatchGetImage'
                  - 'ecr:DescribeImages'
                  - 'ecr:GetAuthorizationToken'
                  - 'ecr:DescribeRepositories'
                  - 'ecr:ListImages'
                  - 'ecr:BatchCheckLayerAvailability'
                  - 'ecr:GetRepositoryPolicy'
                  - 'logs:CreateLogStream'
                  - 'logs:PutLogEvents'
                  - 'logs:CreateLogGroup'
                  - 'logs:PutLogEvents'
                  - 'logs:CreateLogDelivery'
                  - 'logs:CreateLogStream'
                  - 'logs:TagLogGroup'
                Resource: '*'
              - !Ref 'AWS::NoValue'
        - PolicyName: !Sub 'KhulnaSoftretsManagerPolicy-${RandomString}'
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 'secretsmanager:GetSecretValue'
                Resource:
                  - !Ref SecretRDSPassword
                  - !Ref SecretBatchToken
                  - !Ref SecretRDSUsername
                  - !Ref SecretKhulnasoftPassword
                  - !If
                    - CreateAuditrds
                    - !Ref SecretAuditUsername
                    - !Ref 'AWS::NoValue'
                  - !If
                    - CreateAuditrds
                    - !Ref SecretAuditPassword
                    - !Ref 'AWS::NoValue'
                  - !If [ TLSEnable, !Ref TLSRootCA, !Ref "AWS::NoValue" ]
                  - !If [ TLSEnable, !Ref KhulnasoftConsoleCrt, !Ref "AWS::NoValue" ]
                  - !If [ TLSEnable, !Ref KhulnasoftConsoleKey, !Ref "AWS::NoValue" ]
                  - !If [ TLSEnable, !Ref KhulnasoftGatewayCrt, !Ref "AWS::NoValue" ]
                  - !If [ TLSEnable, !Ref KhulnasoftGatewayKey, !Ref "AWS::NoValue" ]
                  - !If [ TLSEnable, !Ref KhulnasoftEnforcerCrt, !Ref "AWS::NoValue" ]
                  - !If [ TLSEnable, !Ref KhulnasoftEnforcerKey, !Ref "AWS::NoValue" ]
        - PolicyName: !Sub 'KMSPermisions-${RandomString}'
          PolicyDocument:
            Version: 2012-10-17
            Statement:
              - Effect: Allow
                Action:
                  - 'kms:Decrypt'
                  - 'kms:Encrypt'
                Resource: '*'
  KhulnasoftConsoleLogGroup:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName: !Join [ '-', [ '/khulnasoft/console', !Join [ "-", [ "td", !GetAtt RandomString.RandomString ] ] ] ]
      RetentionInDays: 30
  KhulnasoftGatewayLogGroup:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName: !Join [ '-', [ '/khulnasoft/gateway', !Join [ "-", [ "td", !GetAtt RandomString.RandomString ] ] ] ]
      RetentionInDays: 30
  KhulnasoftEnforcerLogGroup:
    Type: 'AWS::Logs::LogGroup'
    Properties:
      LogGroupName: !Join [ '-', [ '/khulnasoft/enforcer', !Join [ "-", [ "td", !GetAtt RandomString.RandomString ] ] ] ]
      RetentionInDays: 30
  LBLogsStoreBucket:
    Type: 'AWS::S3::Bucket'
    Properties:
      AccessControl: Private
      BucketName: !Sub
        - ${ECSClusterName2}-lb-accesslogs
        - { ECSClusterName2: !Join ["-", ["s3", !GetAtt RandomString.RandomString]] }
      PublicAccessBlockConfiguration:
        BlockPublicAcls: 'true'
        BlockPublicPolicy: 'true'
        IgnorePublicAcls: 'true'
        RestrictPublicBuckets: 'true'
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - BucketKeyEnabled: true
            ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      VersioningConfiguration:
        Status: Enabled
      Tags:
        - Key: BucketType
          Value: Log
    DeletionPolicy: Delete
  LogsBucketPolicy:
    Type: 'AWS::S3::BucketPolicy'
    Properties:
      Bucket: !Ref LBLogsStoreBucket
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Sid: ELBAccessLogselbacc
            Effect: Allow
            Resource: !Sub '${LBLogsStoreBucket.Arn}/*'
            Principal:
              AWS: !Sub arn:${AWS::Partition}:iam::${AWS::AccountId}:root
            Action:
              - 's3:PutObject'
          - Sid: ELBAccessLogsServiceACL
            Effect: Allow
            Resource: !GetAtt LBLogsStoreBucket.Arn
            Principal:
              Service: delivery.logs.amazonaws.com
            Action:
              - 's3:GetBucketAcl'
          - Sid: ELBAccessLogsServicePut
            Effect: Allow
            Resource: !Sub '${LBLogsStoreBucket.Arn}/*'
            Principal:
              Service: delivery.logs.amazonaws.com
            Action:
              - 's3:PutObject'
            Condition:
              StringEquals:
                s3:x-amz-acl: bucket-owner-full-control
  SecretRDSUsername:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: Khulnasoft RDS Username
      Name: !Sub 'KhulnasoftRdsUsername-${RandomString}'
      SecretString: !Ref KhulnasoftDBUserName
  SecretRDSPassword:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: Khulnasoft RDS Password
      Name: !Sub 'KhulnasoftRdsPassword-${RandomString}'
      SecretString: !Ref KhulnasoftDBPassword
  SecretBatchToken:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: Khulnasoft batch install token
      Name: !Sub 'KhulnasoftBatchInstallToken-${RandomString}'
      SecretString: !Ref BatchInstallToken
  SecretAuditUsername:
    Condition: CreateAuditrds
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: Audit RDS Username
      Name: !Sub 'AuditRdsUsername-${RandomString}'
      SecretString: !Ref AuditDBUserName
  SecretAuditPassword:
    Condition: CreateAuditrds
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: Audit RDS Password
      Name: !Sub 'AuditRdsPassword-${RandomString}'
      SecretString: !Ref AuditDBPassword
  SecretKhulnasoftPassword:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: Khulnasoft Admin Password
      Name: !Sub 'KhulnasoftPassword-${RandomString}'
      SecretString: !Ref KhulnasoftPassword
Outputs:
  KhulnasoftConsole:
    Description: URL to access Khulnasoft Security Console
    Value: !Sub 'https://${KhulnasoftConsoleLB.DNSName}'
  KhulnasoftGatewayExternalConnection:
    Description: >-
      Khulnasoft Enforcer gateway startup connection string for use when Enforcers are
      external to VPC.
    Value: !Sub 'https://${KhulnasoftGatewayLB.DNSName}:8443'
  KhulnasoftConsoleGrpcConnection:
    Description: >-
      DNS to Khulnasoft Console gRPC
    Value: !Sub "https://${KhulnasoftConsoleLB.DNSName}:8442"
  KhulnasoftEcsTaskRole:
    Description: IAM role assigned to access ECR
    Value: !GetAtt KhulnasoftEcsTaskRole.Arn
  KhulnasoftDBInstanceIdentifier:
    Description: Khulnasoft DB Instance Identifier
    Value: !Ref KhulnasoftDBInstanceEndPointURL
    Export:
      Name:
        'Fn::Sub': '${AWS::StackName}-Khulnasoft53DBInstanceID'
  KhulnasoftAuditDBInstanceIdentifier:
    Condition: CreateAuditrds
    Description: Khulnasoft audit DB Instance Identifier
    Value: !Ref AuditDBInstanceEndPointURL
    Export:
      Name:
        'Fn::Sub': '${AWS::StackName}-Khulnasoft53AuditDBInstanceID'
